# qythera

./: .env.example  .gitignore  AGENTS.md  CLEANUP_REPORT.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  install.bat  install.ps1  install.sh  install_serv00.sh  pyproject.toml  qythera  requirements.txt  setup.py  test_universal.py
agent/: __init__.py  agent_config.yaml  base_agent.py  executor.py  plan_execute.py  react.py  reflexion.py
benchmarks/: __init__.py  run_all.py
cli/: __init__.py  main.py  qythera
core/: __init__.py  __main__.py  cli.py  compiler.py  config.py  data.py  distill.py  engine.py  graph_nn.py  intelligence.py  interpret.py  knowledge.py  knowledge_fs.py  language.py  llm.py  logic.py  memory.py  merge.py  model.py  multimodal.py  nn.py  optim.py  peft.py  planning.py  positional.py  quantize.py  retrieval.py  safety.py  sampler.py  server.py  stats.py  sw.js  symbolic.py  tensor.py  tokenizer.py  trainer.py  transformer.py  ui.html
dashboard/: __init__.py  metrics.py
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  FAQ.md  PERFORMANCE.md  QUICKSTART.md  README.md  ROADMAP.md  SAFETY.md  TRAINING.md
inference/: Dockerfile.vllm  __init__.py  launch_vllm.sh  server.py
infra/: docker-compose.yml
memory/: __init__.py  episodic_memory.py  hybrid_retriever.py  memory_config.yaml  semantic_memory.py  summarizer.py  vector_store.py
metrics/: __init__.py  tracker.py
models/: README.md
multimodal/: __init__.py  audio_encoder.py  multimodal_model.py  processor.py  projection.py  video_encoder.py  vision_encoder.py
php/: api.php  index.html  standalone.html
plugins/: __init__.py  registry.py
safety/: __init__.py  jailbreak_filter.py  (+3 more)
(+306 files in other folders)
