[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "qythera"
version = "0.1.0"
description = "Production Superintelligence Platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy",
]

[project.scripts]
qythera = "qythera.inference.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
