[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qythera"
version = "0.1.0"
description = "Production Superintelligence Platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "cpner"}
]
keywords = [
    "ai",
    "transformer",
    "llm",
    "inference",
    "training",
    "numpy",
    "superintelligence"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.22",
]

[project.urls]
Homepage = "https://github.com/cpner/qythera"
Repository = "https://github.com/cpner/qythera"

[project.scripts]
qythera = "qythera.inference.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
